--- a/DSNP40/EDA_Pandas/working_prj_Analysis_of_Amsterdam_Airbnb_data.ipynb
+++ b/DSNP40/EDA_Pandas/working_prj_Analysis_of_Amsterdam_Airbnb_data.ipynb
@@ -150,7 +150,7 @@
         "* license - the license/permit/registration\n",
         "\n",
         "\n",
-        "**Before initiating any analysis, let's begin by examining the initial entries in our *dataset*. We will review the first 5 entries to get sense of the data.**"
+        "**Before initiating any analysis, let's begin by examining the initial entries in our *dataset*. We will review the first 5 entries to get a sense of the data.**"
       ]
     },
     {
